--- a/playbooks/roles/github-runner/tasks/main.yml
+++ b/playbooks/roles/github-runner/tasks/main.yml
@@ -24,6 +24,7 @@
     - scripts
     - homepage
     - gemini-cli
+    - tunnel
 
 - name: Remove github-runner
   shell: cd github-runner && docker compose down && docker compose rm
