Changed to relative location for env files

--- a/playbooks/files/gemini-cli/docker-compose.yml
+++ b/playbooks/files/gemini-cli/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     container_name: gemini-cli
     env_file:
-      - /home/ansible-user/gemini-cli/.env
+      - .env
     volumes:
       - /home/ansible-user/gemini-cli/app:/app
     networks:
