--- a/playbooks/files/tunnel/docker-compose.yml
+++ b/playbooks/files/tunnel/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     restart: unless-stopped
     command: tunnel run
     env_file:
-      - /home/ansible-user/tunnel/.env
+      - .env
     network_mode: host
