--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,8 @@
 name: Deploy to Homelab
 description: Deploy Services to Homelab
 run-name: ${{ github.actor }} is running the workflow
-on: [push]
+on:
+  workflow_dispatch:
 jobs:
   run-playbook:
     runs-on: self-hosted
