--- a/playbooks/roles/github-runner/tasks/main.yml
+++ b/playbooks/roles/github-runner/tasks/main.yml
@@ -19,6 +19,7 @@
     dest: /home/ansible-user/github-runner/service-secrets/{{ item }}
   loop:
     - traefik
+    - keycloak
     - portainer
     - database
     - scripts
