--- a/playbooks/files/keycloak/docker-compose.yml
+++ b/playbooks/files/keycloak/docker-compose.yml
@@ -6,9 +6,7 @@ services:
       - .env
     command:
       - start-dev
-    environment:
-      KC_HTTP_PORT: 8080
-      # KC_IMPORT: /opt/keycloak/data/import/myrealm.json
+      - --import-realm
     ports:
       - "9221:8080"
     networks:
