--- a/playbooks/roles/github-runner/tasks/main.yml
+++ b/playbooks/roles/github-runner/tasks/main.yml
@@ -26,6 +26,7 @@
     - homepage
     - gemini-cli
     - tunnel
+    - wiregaurd
 
 - name: Remove github-runner
   shell: cd github-runner && docker compose down && docker compose rm
