--- a/playbooks/files/wiregaurd/docker-compose.yml
+++ b/playbooks/files/wiregaurd/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - SYS_MODULE
     sysctls:
       - net.ipv4.ip_forward=1
-      - net.ipv4.conf.all.src_valid_lables=1
+      - net.ipv4.conf.all.src_valid_mark=1
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
