--- a/playbooks/roles/filebrowser/tasks/main.yml
+++ b/playbooks/roles/filebrowser/tasks/main.yml
@@ -1,14 +1,13 @@
 - name: Copy filebrowser files in
   copy: 
-    src: filebrowser/{{ item }}
+    src: "{{ item }}"
     dest: /home/ansible-user/filebrowser/
   loop:
     - docker-compose.yml
     - filebrowser.json
 
-- name: Remove filebrowser
-  shell: cd filebrowser && docker compose down && docker compose rm
-  ignore_errors: yes
-
-- name: Setup filebrowser
-  shell: cd filebrowser && docker compose up -d
+- name: Restart filebrowser service
+  include_role:
+    name: restart-service
+  vars:
+    service_name: "filebrowser"
