--- a/playbooks/roles/portainer/tasks/main.yml
+++ b/playbooks/roles/portainer/tasks/main.yml
@@ -1,21 +1,20 @@
 - name: Copy portainer docker-compose.yml
   copy: 
-    src: portainer/{{ item }}
+    src: "{{ item }}"
     dest: /home/ansible-user/portainer/
   loop:
     - docker-compose.yml
 
 - name: Copy TLS Certs
   copy: 
-    src: portainer/secrets/{{ item }}
+    src: secrets/{{ item }}
     dest: /home/ansible-user/portainer/secrets/
   loop:
     - tls.crt
     - tls.key
 
-- name: Remove Portainer
-  shell: cd portainer && docker compose down && docker compose rm
-  ignore_errors: yes
-
-- name: Setup portainer docker
-  shell: cd portainer && docker compose up -d
+- name: Restart portainer service
+  include_role:
+    name: restart-service
+  vars:
+    service_name: "portainer"
