--- a/playbooks/roles/tunnel/tasks/main.yml
+++ b/playbooks/roles/tunnel/tasks/main.yml
@@ -1,14 +1,13 @@
 - name: Copy tunnel files in
   copy: 
-    src: tunnel/{{ item }}
+    src: "{{ item }}"
     dest: /home/ansible-user/tunnel/
   loop:
     - docker-compose.yml
     - secrets/.env
 
-- name: Remove tunnel
-  shell: cd tunnel && docker compose down && docker compose rm
-  ignore_errors: yes
-
-- name: Setup tunnel
-  shell: cd tunnel && docker compose up -d
+- name: Restart tunnel service
+  include_role:
+    name: restart-service
+  vars:
+    service_name: "tunnel"
