--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
           for service in /home/service-secrets/*; do
           if [ -d "$service" ]; then
             service_name=$(basename "$service")
-            mkdir -p "playbooks/$service_name/files"
-            cp -r "$service"/* "playbooks/$service_name/files"
+            mkdir -p "playbooks/roles/$service_name/files"
+            cp -r "$service"/* "playbooks/roles/$service_name/files"
           fi
             done
           
